VSE: Erroneous tooltip for "Slip Strip Contents" menu operator #91285

Closed
opened 2021-09-09 13:48:42 +02:00 by David Salvo · 6 comments

System Information
Operating system: Linux-5.4.0-81-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce 9800 GT/PCIe/SSE2 NVIDIA Corporation 3.3.0 NVIDIA 340.108

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-25 23:03, hash: 70fbdcb6bf
Worked: Unsure

Short description of error
The "Slip strip contents" function operates on selected strip(s), but the hover tooltip incorrectly says it works on the active strip.
image.png

Exact steps for others to reproduce the error

  • Hover mouse over Slip Strip Contents option in VSE menu ([Strip] menu -> [Transform] menu -> [Slip Strip Contents])
  • Tooltip says "Trim the contents of the active strip"
  • It should say "Trim the contents of selected strips" (as per its actual operation)
**System Information** Operating system: Linux-5.4.0-81-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce 9800 GT/PCIe/SSE2 NVIDIA Corporation 3.3.0 NVIDIA 340.108 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-25 23:03, hash: `70fbdcb6bf` Worked: Unsure **Short description of error** The "Slip strip contents" function operates on selected strip(s), but the hover tooltip incorrectly says it works on the active strip. ![image.png](https://archive.blender.org/developer/F10390730/image.png) **Exact steps for others to reproduce the error** - Hover mouse over Slip Strip Contents option in VSE menu ([Strip] menu -> [Transform] menu -> [Slip Strip Contents]) - Tooltip says "Trim the contents of the active strip" - It should say "Trim the contents of selected strips" (as per its actual operation)
Author

Added subscriber: @slinkeepie

Added subscriber: @slinkeepie
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade self-assigned this 2021-09-09 15:36:25 +02:00
Member

Small fix so I will try to do this :)

Small fix so I will try to do this :)

This issue was referenced by 33dc584b37

This issue was referenced by 33dc584b371211428130596d99559a271c25bc66

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91285
No description provided.